JUnit 5/AssertJ migration: spring-boot-starter modules (#388)
Refactor code for distro/run to JUnit 5:

- Perform initial migration with OpenRewrite recipes org.openrewrite.java.testing.junit5.JUnit4to5Migration,org.openrewrite.java.testing.cleanup.RemoveTestPrefix,org.openrewrite.java.testing.cleanup.TestsShouldNotBePublic,org.openrewrite.java.testing.assertj.JUnitToAssertj,org.openrewrite.java.testing.assertj.SimplifyAssertJAssertion,org.openrewrite.staticanalysis.UnnecessaryThrows
- rename HttpClientRule -> HttpClientExtension, use `@RegisterExtension`
- assign random port to HttpClientExtension
- organize imports
- code cleanup
- resolve Sonar warnings
- use constructor injection
- fix typos
- fix tests
- resolve code analysis issues
- combine to parametrized test

related to #27